.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
04:02:09 **** Incremental Build of configuration Debug for project motorDriving ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/motorController.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4R5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/motorController.d" -MT"Core/Src/motorController.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/motorController.o"
../Core/Src/motorController.c: In function 'convertToCoord':
../Core/Src/motorController.c:52:16: warning: implicit declaration of function 'atoi' [-Wimplicit-function-declaration]
   52 |  coord.y = (2*(atoi(&square[1])-1) + 1)*(smallLength/16.0);
      |                ^~~~
../Core/Src/motorController.c:55:3: warning: implicit declaration of function 'exit' [-Wimplicit-function-declaration]
   55 |   exit(1);
      |   ^~~~
../Core/Src/motorController.c:55:3: warning: incompatible implicit declaration of built-in function 'exit'
../Core/Src/motorController.c:3:1: note: include '<stdlib.h>' or provide a declaration of 'exit'
    2 | #include <stdio.h>
  +++ |+#include <stdlib.h>
    3 | 
../Core/Src/motorController.c: In function 'executeInstruction':
../Core/Src/motorController.c:113:2: warning: implicit declaration of function 'strncpy' [-Wimplicit-function-declaration]
  113 |  strncpy(square1, instructions, 2);
      |  ^~~~~~~
../Core/Src/motorController.c:113:2: warning: incompatible implicit declaration of built-in function 'strncpy'
../Core/Src/motorController.c:3:1: note: include '<string.h>' or provide a declaration of 'strncpy'
    2 | #include <stdio.h>
  +++ |+#include <string.h>
    3 | 
../Core/Src/motorController.c:118:5: warning: the address of 'square1' will always evaluate as 'true' [-Waddress]
  118 |  if(square1)
      |     ^~~~~~~
../Core/Src/motorController.c:119:1: error: expected expression before '}' token
  119 | }
      | ^
make: *** [Core/Src/subdir.mk:43: Core/Src/motorController.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
